<resources>
    <string name="app_name">NineBx</string>
    <string name="terms_of_use"><u>Terms of Use</u></string>
    <string name="ac_terms_of_use">Terms of Use</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="ac_privacy_policy">Privacy Policy</string>
    <string name="email_address">Email address</string>
    <string name="master_password">Master password</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="search">Search</string>
    <string name="calendar">Calendar</string>
    <string name="lists">Lists</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="custom_font">AvenirNextLTPro-Regular.ttf</string>
    <string name="request_permission">Request</string>
    <string name="permission_camera_explanation">Application needs CAMERA_PERMISSION in order to capture image. Please allow permission.</string>
    <string name="permission_camera_denied">Please enable CAMERA_PERMISSION. Go to \nSettings -> Apps -> Permission</string>
    <string name="permission_read_calendar_explanation">Application needs READ_CALENDAR_PERMISSION in order access calendar. Please allow permission.</string>
    <string name="permission_read_calendar_denied">Please enable READ_CALENDAR_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_write_calendar_explanation">Application needs WRITE_CALENDAR_PERMISSION in order access calendar. Please allow permission.</string>
    <string name="permission_write_calendar_denied">Please enable WRITE_CALENDAR_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_write_contacts_explanation">Application needs WRITE_CONTACTS_PERMISSION in order access contacts. Please allow permission.</string>
    <string name="permission_write_contacts_denied">Please enable WRITE_CONTACTS_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_read_contacts_explanation">Application needs READ_CONTACTS_PERMISSION in order access contacts. Please allow permission.</string>
    <string name="permission_read_contacts_denied">Please enable READ_CONTACTS_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_get_account_explanation">Application needs GET_ACCOUNTS_PERMISSION in order access your accounts. Please allow permission.</string>
    <string name="permission_get_account_denied">Please enable GET_ACCOUNTS_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_access_fine_location_explanation">Application needs ACCESS_FINE_LOCATION_PERMISSION in order to access your location. Please allow permission.</string>
    <string name="permission_access_fine_location_denied">Please enable ACCESS_FINE_LOCATION_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_access_coarse_location_explanation">Application needs ACCESS_COARSE_LOCATION_PERMISSION in order access your location. Please allow permission.</string>
    <string name="permission_access_coarse_location_denied">Please enable ACCESS_COARSE_LOCATION_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_record_audio_explanation">Application needs RECORD_AUDIO_PERMISSION in order to use microphone. Please allow permission.</string>
    <string name="permission_record_audio_denied">Please enable RECORD_AUDIO_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_read_phone_state_explanation">Application needs READ_PHONE_STATE_PERMISSION in order to access phone state. Please allow permission.</string>
    <string name="permission_read_phone_state_denied">Please enable READ_PHONE_STATE_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_call_phone_explanation">Application needs CALL_PHONE_PERMISSION in order to make a call. Please allow permission.</string>
    <string name="permission_call_phone_denied">Please enable CALL_PHONE_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_read_call_log_explanation">Application needs READ_CALL_LOG_PERMISSION in order to read call log. Please allow permission.</string>
    <string name="permission_read_call_log_denied">Please enable READ_CALL_LOG_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_write_call_log_explanation">Application needs WRITE_CALL_LOG_PERMISSION in order to write into call log. Please allow permission.</string>
    <string name="permission_write_call_log_denied">Please enable WRITE_CALL_LOG_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_add_voicemail_explanation">Application needs ADD_VOICEMAIL_PERMISSION in order to add voicemail. Please allow permission.</string>
    <string name="permission_add_voicemail_denied">Please enable ADD_VOICEMAIL_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_use_sip_explanation">Application needs USE_SIP_PERMISSION in order to use SIP. Please allow permission.</string>
    <string name="permission_use_sip_denied">Please enable USE_SIP_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_process_outgoing_calls_explanation">Application needs PROCESS_OUTGOING_CALLS_PERMISSION in order to process outgoing calls. Please allow permission.</string>
    <string name="permission_process_outgoing_calls_denied">Please enable PROCESS_OUTGOING_CALLS_PERMISSION. Go to \nSettings -> Apps -> Permissions</string>
    <string name="permission_body_sensor_explanation">Application needs BODY_SENSORS_PERMISSION in order to use body sensor. Please allow permission.</string>
    <string name="permission_body_sensor_denied">Please enable BODY_SENSORS_PERMISSION. Go to \nSettings -> Apps -> Permission</string>
    <string name="permission_send_sms_explanation">Application needs SEND_SMS_PERMISSION in order to send SMS. Please allow permission.</string>
    <string name="permission_send_sms_denied">Please enable SEND_SMS_PERMISSION. Go to \nSettings -> Apps -> Permission</string>
    <string name="permission_receive_sms_explanation">Application needs RECEIVE_SMS_PERMISSION in order to receive SMS. Please allow permission.</string>
    <string name="permission_receive_sms_denied">Please enable RECEIVE_SMS_PERMISSION. Go to \nSettings -> Apps -> Permission</string>
    <string name="permission_receive_mms_explanation">Application needs RECEIVE_MMS_PERMISSION in order to receive MMS. Please allow permission.</string>
    <string name="permission_receive_mms_denied">Please enable RECEIVE_MMS_PERMISSION. Go to \nSettings -> Apps -> Permission</string>
    <string name="permission_read_sms_explanation">Application needs READ_SMS_PERMISSION in order to read SMS. Please allow permission.</string>
    <string name="permission_read_sms_denied">Please enable READ_SMS_PERMISSION. Go to \nSettings -> Apps -> Permission</string>
    <string name="permission_receive_wap_push_explanation">Application needs RECEIVE_WAP_PUSH_PERMISSION in order to receive WAP SMS. Please allow permission.</string>
    <string name="permission_receive_wap_push_denied">Please enable RECEIVE_WAP_PUSH_PERMISSION. Go to \nSettings -> Apps -> Permission</string>
    <string name="permission_read_ext_storage_explanation">Application needs READ_EXTERNAL_STORAGE_PERMISSION in order to read from disk memory. Please allow permission.</string>
    <string name="permission_read_ext_storage_denied">Please enable READ_EXTERNAL_STORAGE_PERMISSION. Go to \nSettings -> Apps -> Permission</string>
    <string name="submit">SUBMIT</string>
    <string name="screen_two_description">Involve everyone in building the complete picture.</string>
    <string name="be">be</string>
    <string name="engaged">engaged</string>
    <string name="security_overview">Security overview</string>
    <string name="create_master_password">Create master password</string>
    <string name="new_master_password">New master password</string>
    <string name="confirm_master_password">Confirm master Password</string>
    <string name="confirm_new_master_password">Confirm new master password</string>
    <string name="current_master_password">Current master password</string>
    <string name="change_account_master_password">Change your account\n Master Password</string>
    <string name="choose_a_strong_password">\u25CF <b>Choose a strong master password,</b> <font color='#C7C7CD'> with at least\n\t\u25CB eight characters\n\t\u25CB one uppercase letter\n\t\u25CB one lowercase letter\n\t\u25CB one number\n\t\u25CB one symbol(!, @, #, $, etc.)</font> </string>
    <string name="end_to_end_encryption">End-to-end encryption</string>
    <string name="end_to_end_encryption_description1">With NineBx all your data whether at rest or in transit is fully encrypted and cannot be read by anyone other than you. Your data is encrypted and decrypted only at the device level and only on your authorized device so only you can see it.</string>
    <string name="end_to_end_encryption_description2">Your data is secured using military-grade AES 256-bit encryption with PBKDF2 key derivation with 10000 iterations. This makes it effectively impossible for anyone to decrypt your data without knowledge of your Master Password.</string>
    <string name="only_you_have_the_key">Only you have the key to your data</string>
    <string name="only_you_have_the_key_description1">All encryption and decryption of data requires knowledge of the Master Password which only you as the user know.</string>
    <string name="only_you_have_the_key_description2">For your security the Master Password is never stored on our servers and is never transmitted over the internet. Given this added security measure NineBx is not able to help you access your data if you ever happen to forget your Master Password.</string>
    <string name="multi_factor_authentication">Multi-factor authentication</string>
    <string name="multi_factor_authentication_description1">In addition to confirming your Master Password NineBx security requires you to authenticate any new device you use with a time-based one-time password (OTP) that is sent to your registered email.</string>
    <string name="multi_factor_authentication_description2">For added security the app is locked whenever it is pushed to the background on your device. Unlocking it requires you to enter a 6-digit Personal Passcode for NineBx that you create at Sign Up. For your convenience you can enable Touch ID so you do not have to key in this passcode every time.</string>
    <string name="secure_and_reliable">Secure and reliable cloud storage</string>
    <string name="secure_and_reliable_description">NineBx servers are hosted on Amazon Web Services (AWS) widely considered to be one of the most secure and reliable cloud platforms in the industry.</string>
    <string name="ninebx_best_in_class_security">NineBx Best-in-Class Security</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thrusday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="add_event">Add Event</string>
    <string name="account_master_password_share">\u25CF <b> Choose one you can share </b>- <font color='#C7C7CD'>you will need to share this master password with users you add to this account.</font></string>
    <string name="account_master_password_remember">\u25CF <b> Please remember it - </b><font color='#C7C7CD'>only you and your other account users will know this password. For your security, your master password is never saved on our servers and cannot be retrieved if forgotten.</font></string>
</resources>