<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search" />
    <item
        android:id="@+id/item_calendar"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/calendar" />
    <item
        android:id="@+id/item_lists"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/lists" />
    <item
        android:id="@+id/item_notifications"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:title="@string/notifications" />
    <item
        android:id="@+id/item_account"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/account" />
</menu>