<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtSubHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/default_mini_padding"
            android:text="@string/change_account_master_password"
            android:textColor="@color/textColorGreen"
            android:textSize="@dimen/text_16" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_master_password"
            android:textColorHint="@color/colorPrimary"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_master_password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_master_password"
            android:textColorHint="@color/colorPrimary"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_master_password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_master_password"
            android:textColorHint="@color/colorPrimary"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_master_password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_mini_padding"
                    android:text="@string/choose_a_strong_password"
                    android:textColor="@color/grey_700" />

                <TextView
                    android:id="@+id/txtSharePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_mini_padding"
                    android:text="@string/account_master_password_share"
                    android:textColor="@color/grey_700" />

                <TextView
                    android:id="@+id/txtRememberIt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_mini_padding"
                    android:text="@string/account_master_password_remember"
                    android:textColor="@color/grey_700" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:background="@drawable/login_btn"
                    android:text="@string/submit"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>


        </ScrollView>

    </LinearLayout>


</RelativeLayout>
