<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.astuetz.PagerSlidingTabStrip
        android:id="@+id/tabMonths"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:tabMode="scrollable" />

    <LinearLayout
        android:id="@+id/layoutDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tabMonths"
        android:layout_margin="@dimen/default_mini_padding"
        android:orientation="horizontal"
        android:weightSum="7">

        <TextView
            android:id="@+id/tvSunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sunday"
            android:textColor="@color/blue_400" />

        <TextView
            android:id="@+id/tvMonday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monday"
            android:textColor="@color/blue_400" />

        <TextView
            android:id="@+id/tvTuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textColor="@color/blue_400" />

        <TextView
            android:id="@+id/tvWednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textColor="@color/blue_400" />

        <TextView
            android:id="@+id/tvThursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thrusday"
            android:textColor="@color/blue_400" />

        <TextView
            android:id="@+id/tvFriday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friday"
            android:textColor="@color/blue_400" />

        <TextView
            android:id="@+id/tvSaturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/saturday"
            android:textColor="@color/blue_400" />
    </LinearLayout>

    <com.ninebx.ui.home.customView.CustomViewPager
        android:id="@+id/vpMonths"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:layout_below="@+id/layoutDays" />

    <LinearLayout
        android:id="@+id/layoutEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvAddEvent"
        android:layout_below="@+id/vpMonths"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@color/divider_color" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvDayEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            tools:listitem="@layout/item_event" />


    </LinearLayout>


    <TextView
        android:id="@+id/tvAddEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/grey_200"
        android:drawableEnd="@drawable/ic_add_circle_outline_blue_300_24dp"
        android:drawablePadding="@dimen/default_mini_padding"
        android:drawableRight="@drawable/ic_add_circle_outline_blue_300_24dp"
        android:gravity="center|end"
        android:padding="@dimen/default_margin"
        android:text="@string/add_event" />

</RelativeLayout>

