<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgDescription"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_220sdp"
            android:background="@drawable/walkthrough_3" />

        <LinearLayout
            android:id="@+id/layoutHeadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_mini_padding"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleHelpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/be"
                android:textColor="@color/be_empowered"
                android:textSize="@dimen/_17sdp" />

            <TextView
                android:id="@+id/titleHelpTextExtended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/engaged"
                android:textSize="@dimen/_17sdp" />

        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/be_engaged">

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/default_micro_padding"
            android:text="@string/screen_two_description"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14" />

    </RelativeLayout>

</RelativeLayout>